--- a/views/search.ejs
+++ b/views/search.ejs
@@ -1,5 +1,6 @@
 <%- include('header') %>
 
+
   <h1>NASA Object Search Listing</h1>
   <!-- back button takes the user to the index page -->
   <button onclick="location.href='/'" type="button" class="btn btn-primary"><span class="glyphicon glyphicon-plus"></span>Back
@@ -25,11 +26,10 @@
       <% nasa.collection.items.forEach(object => { %>
         <tr>
           <td><%- object.data[0].title %> </td>
-          <td><%- object.data[0].media_type %> </td>
-          <td><%- object.data[0].center %> </td>
+          <td style="background-color:blue; color:red"; height:10%><%- object.data[0].media_type %> </td>
+          <td><%- object.data[0].center %></div> </td>
           <td><%- object.data[0].date_created.substring(0,10) %> </td>
-          <td><%- object.data[0].description.substring(0,1000) %><% if (object.data[0].description.length > 1001 ) {%>...<% } %>
-          </td>
+          <td><div style="max-height:300px; overflow-y:scroll"><%- object.data[0].description %></div></td>
           <% if (object.links) { %>
             <td style="padding:10px; border:1px solid">
               <img src="<%- object.links[0].href %>" style="width:400px" />
