--- a/views/search.ejs
+++ b/views/search.ejs
@@ -26,10 +26,10 @@
       <% nasa.collection.items.forEach(object => { %>
         <tr>
           <td><%- object.data[0].title %> </td>
-          <td style="background-color:blue; color:red"; height:10%><%- object.data[0].media_type %> </td>
+          <td><%- object.data[0].media_type %> </td>
           <td><%- object.data[0].center %></div> </td>
           <td><%- object.data[0].date_created.substring(0,10) %> </td>
-          <td><div style="max-height:300px; overflow-y:scroll"><%- object.data[0].description %></div></td>
+          <td><div style="max-height:500px; overflow-y:scroll"><%- object.data[0].description %></div></td>
           <% if (object.links) { %>
             <td style="padding:10px; border:1px solid">
               <img src="<%- object.links[0].href %>" style="width:400px" />
