--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,26 +6,34 @@
     <form name="form1" method="GET" action="/search">
     <table>
         <tr>
-        <td>General Search</td>
+        <td>General Search:</td>
         <td><input type="text" name="general_search" ></td>
         </tr>
 
         <tr>
         <td><hr><h4>Search By:</h4></td></br>
         </tr>
-        <td>Title</td>
+        <td>Title:</td>
         <td><input type="text" name="title" ></td>
         </tr>
         <tr>
-        <td>Description</td>
+        <td>Description:</td>
         <td><input type="text" name="description" ></td>
         </tr>
         <tr>
-        <td>Location</td>
+        <td>Location:</td>
         <td><input type="text" name="location" ></td>
         </tr>
         <tr>
-          <td>Nasa Center</td>
+        <td>After Year:</td>
+        <td><input type="number" name="year_start" min="1" max="9999"></td>
+        </tr>
+        <tr>
+        <td>Before Year:</td>
+        <td><input type="number" name="year_end" min="1" max="9999"></td>
+        </tr>
+        <tr>
+          <td>Nasa Center:</td>
           <td>
             <select name="nasa_center">
               <option selected value =""></option>
@@ -41,7 +49,7 @@
               <option value="MSFC">Marshall Space Flight Center</option>
               <option value="MAF">Michoud Assembly Facility</option>
               <option value="SSC">Stennis Space Center</option>
-]            </select>
+            </select>
           </td>
         </tr>
         <tr>
@@ -50,5 +58,3 @@
     </table>
     </form>   
   </div>
-  
-  <%- include('footer') %>
